app/styles/app.scss
/* ... */
.contestCardWrapper:nth-of-type(6n+1) .contestCard .img-overlay {
  background-color: rgba(255, 162, 52, .7);
}

.contestCardWrapper:nth-of-type(6n+2) .contestCard .img-overlay {
  background-color: rgba(255, 84, 131, .7);
}

.contestCardWrapper:nth-of-type(6n+3) .contestCard .img-overlay {
  background-color: rgba(2, 179, 228, .7);
}

.contestCardWrapper:nth-of-type(6n+4) .contestCard .img-overlay {
  background-color: rgba(169, 81, 237, .7);
}

.contestCardWrapper:nth-of-type(6n+5) .contestCard .img-overlay {
  background-color: rgba(2, 204, 186, .7);
}

.contestCardWrapper:nth-of-type(6n+6) .contestCard .img-overlay {
  background-color: rgba(125, 151, 173, .7);
}

a:hover, a:focus {
  text-decoration: none !important;
}

.sidebar .menu {
  background: #455a64;
}

#leftsidebar {
  text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
  text-rendering: optimizelegibility;

  .menu li a span {
    margin-top: 7.5px;
  }
}

.n-top.blur-bg {
  z-index: 1000;
  background: rgba(0, 0, 0, 1) !important;
  -webkit-filter: blur(20px);
  -moz-filter: blur(20px);
  -o-filter: blur(20px);
  -ms-filter: blur(20px);
  filter: blur(20px);
  transition: all .3s ease;
}

.sidebar .menu .list a, .sidebar .menu .list a span {
  color: #eceff1;
}

.sidebar .menu .list li.active {
  background: #fc4f4f !important;
}

.timeLeft {
  display: inline-block;
  width: 33%;
  font-size: 14px !important;
  color: #333 !important;
  background: none !important;
}

.text-col-two {
  display: inline-block;
  width: 30%;
  font-size: 14px !important;
  color: #333 !important;
  background: none !important;
  top: 30%;
  transform: translateY(-30%);
}

.caption p {
  font-size: 14px !important;
  color: #333 !important;
  word-wrap: break-word;
  max-width: 100%;
  overflow: hidden;
}

.big-digit {
  font-size: 32px !important;
}

.big-alpha {
  font-size: 15px !important;
  text-transform: uppercase;
  color: #333 !important;
}

.contestCard {
  height: 425px !important;
}

hr {
  margin-bottom: 10px !important;
  margin-top: 10px !important;
}

@media (max-width: 355px) {
  .big-alpha {
    font-size: 13px !important;
  }
  .mintxt {
    font-size: 12px !important;
  }
}

.thumbnail h3 {
  margin: 10px 0px !important;
}

.btn {
  box-shadow: 8px 10px 20px 0 rgba(46, 61, 73, .15) !important;
  border-radius: 3px;
  &:hover {
    box-shadow: 2px 4px 8px 0 rgba(46, 61, 73, .2) !important;
  }
}

.g-bg-blush2 {
  background: #02b3e4 !important;
}

.btn-filled-aqua {
  background: #02b3e4 !important;
  color: #fff !important;
}

.btn-filled-cyan {
  background: #02ccba !important;
  color: #fff !important;
}

.label-danger {
  background-color: #fc4f4f !important;
  color: #ffffff !important;
}

.chip {
  border-radius: 3px !important;
}

.card.greenhead .header h2 {
  color: #333333 !important;
}

.loading-container {
  position: relative;
  height: 100vh;
}

/*Loader Update*/
.pl-blue {
  stroke: #02b3e4;
}

.loader {
  margin: calc(50vh - 25px) calc(50vw - 125px);
}

.loader--glisteningWindow {
  width: 0.5em;
  height: 0.5em;
  box-shadow: 0.70711em 0.70711em 0 0em #455a64, -0.70711em 0.70711em 0 0.17678em #9b59b6, -0.70711em -0.70711em 0 0.25em #455a64, 0.70711em -0.70711em 0 0.17678em #f1c40f;
  animation: gw 1s ease-in-out infinite, rot 2.8s linear infinite;
}

@keyframes rot {
  to {
    transform: rotate(360deg);
  }
}

@keyframes gw {
  0% {
    box-shadow: 0.70711em 0.70711em 0 0.125em #455a64, -0.70711em 0.70711em 0 0.39017em #fc4f4f, -0.70711em -0.70711em 0 0.5em #455a64, 0.70711em -0.70711em 0 0.39017em #fc4f4f;
  }
  25% {
    box-shadow: 0.70711em 0.70711em 0 0.39017em #455a64, -0.70711em 0.70711em 0 0.5em #fc4f4f, -0.70711em -0.70711em 0 0.39017em #455a64, 0.70711em -0.70711em 0 0.125em #fc4f4f;
  }
  50% {
    box-shadow: 0.70711em 0.70711em 0 0.5em #455a64, -0.70711em 0.70711em 0 0.39017em #fc4f4f, -0.70711em -0.70711em 0 0.125em #455a64, 0.70711em -0.70711em 0 0.39017em #fc4f4f;
  }
  75% {
    box-shadow: 0.70711em 0.70711em 0 0.39017em #455a64, -0.70711em 0.70711em 0 0.125em #fc4f4f, -0.70711em -0.70711em 0 0.39017em #455a64, 0.70711em -0.70711em 0 0.5em #fc4f4f;
  }
  100% {
    box-shadow: 0.70711em 0.70711em 0 0.125em #455a64, -0.70711em 0.70711em 0 0.39017em #fc4f4f, -0.70711em -0.70711em 0 0.5em #455a64, 0.70711em -0.70711em 0 0.39017em #fc4f4f;
  }
}

blue-bar {
  height: 45px;
  width: 100%;
  color: white;
  background: darkcyan;
  position: absolute;
  bottom: 1px;
  left: 0px;
}

.course-fee {
  margin: 10px 45%;
  position: absolute;
}

.banner {
  display: flex;
}

.course-details {
  padding: 25px;
  width: 100%;
  background: #F4F4F4;
}

.course-insights {
  display: flex;
}

.course-insight {
  margin: 20px;
}

.white-circle {
  height: 80px;
  width: 80px;
  background: white;
  border-radius: 50px;
  padding: 20px 0px 0px 25px;
  font-size: 30px;
}

.circle-text {
  padding: 5px 15%;
}

.loader--circularSquare {
  width: 0;
  height: 0;
  box-shadow: -0.625em -0.625em 0 0.625em #455a64, 0.625em -0.625em 0 0.625em #fc4f4f, -0.625em 0.625em 0 0.625em #fc4f4f, 0.625em 0.625em 0 0.625em #455a64;
  animation: circSquare 1.5s ease-in-out infinite;
}

@keyframes circSquare {
  50% {
    width: 1.25em;
    height: 1.25em;
    border-radius: 50%;
    transform: rotate(0.5turn);
    box-shadow: -2.5em 0 0 #02CCBA, 2.5em 0 0 #FF5483, -2.5em 0 0 #02B3E4, 2.5em 0 0 #A951ED;
  }
  80%, 100% {
    transform: rotate(1turn);
  }
}

/* -------------- Loader1 -------------- */

.loader1 {
  position: relative;
  height: 50px;
  width: 50px;
  border-radius: 50px;
  border: 3px solid #455a64;
  -webkit-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-animation: loader1 500ms linear infinite;
  animation: loader1 500ms linear infinite;
  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
}

.loader1:after {
  content: "";
  position: absolute;
  top: -5px;
  left: 20px;
  width: 11px;
  height: 11px;
  border-radius: 10px;
  background-color: #fc4f4f;
}
/* ... */

